fixed text contrast

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,65 +1,69 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* inter-tight-300 - latin */
 @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Inter Tight Light';
+    font-display: swap; 
+    font-family: 'Inter Tight-Light';
     font-style: normal;
     font-weight: 300;
-    src: url('/fonts/inter-tight-v7-latin-300.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('/fonts/inter-tight-v7-latin-300.woff2') format('woff2'); 
   }
   /* inter-tight-regular - latin */
   @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Inter Tight Regular';
+    font-display: swap; 
+    font-family: 'Inter Tight-Regular';
     font-style: normal;
     font-weight: 400;
-    src: url('/fonts/inter-tight-v7-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('/fonts/inter-tight-v7-latin-regular.woff2') format('woff2'); 
   }
   /* inter-tight-500 - latin */
   @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Inter Tight Medium';
+    font-display: swap;
+    font-family: 'Inter Tight-Medium';
     font-style: normal;
     font-weight: 500;
-    src: url('/fonts/inter-tight-v7-latin-500.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('/fonts/inter-tight-v7-latin-500.woff2') format('woff2'); 
   }
   /* inter-tight-600 - latin */
   @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Inter Tight Semibold';
+    font-display: swap; 
+    font-family: 'Inter Tight-Semibold';
     font-style: normal;
     font-weight: 600;
-    src: url('/fonts/inter-tight-v7-latin-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('/fonts/inter-tight-v7-latin-600.woff2') format('woff2'); 
   }
   /* inter-tight-700 - latin */
   @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Inter Tight Bold';
+    font-display: swap; 
+    font-family: 'Inter Tight-Bold';
     font-style: normal;
     font-weight: 700;
-    src: url('/fonts/inter-tight-v7-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('/fonts/inter-tight-v7-latin-700.woff2') format('woff2'); 
   }
   /* inter-tight-800 - latin */
   @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Inter Tight Bolder';
+    font-display: swap; 
+    font-family: 'Inter Tight-Bolder';
     font-style: normal;
     font-weight: 800;
-    src: url('/fonts/inter-tight-v7-latin-800.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('/fonts/inter-tight-v7-latin-800.woff2') format('woff2'); 
   }
   /* inter-tight-900 - latin */
   @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Inter Tight Black';
+    font-display: swap; 
+    font-family: 'Inter Tight-Black';
     font-style: normal;
     font-weight: 900;
-    src: url('/fonts/inter-tight-v7-latin-900.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('/fonts/inter-tight-v7-latin-900.woff2') format('woff2'); 
   }
 
 body {
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
-    font-family: 'Inter Tight Regular', sans-serif;
+    font-family: 'Inter Tight-Regular', sans-serif;
 }
 
 *, *:before, *:after {
@@ -69,11 +73,19 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     text-wrap: balance;
-    font-family: 'Inter Tight Semibold', sans-serif;
+    font-family: 'Inter Tight-Semibold', sans-serif;
     max-width: 20ch;
 }
 
 p, li, figcaption {
     text-wrap: pretty;
     max-width: 60ch;
+}
+
+/* Tailwind Classes */
+
+@layer utilities{
+  .text-contrast{
+    @apply text-gray-600
+  }
 }
